--- a/source/less/includes/variables.less
+++ b/source/less/includes/variables.less
@@ -13,14 +13,14 @@
 
 
 // Header
-@header-height: 2.5rem;
+@header-height: 2.75rem;
 @header-background-color: rgb(34, 34, 34);
 @header-font-family: AdobeClean;
 
-@header-item-font-color: rgb(153, 153, 153);
-@header-item-spacing: 1rem;
-
-@header-item-down-font-color: white;
+@header-nav-font-size: 1.125em; // 18px;
+@header-nav-font-color: rgb(153, 153, 153);
+@header-nav-spacing: 1.5rem;
+@header-nav-down-font-color: white;
 
 @header-logo-size: @header-height / 5 * 3;
 
@@ -151,7 +151,7 @@
 
 
 // Close button
-@close-font-size: 1.5rem;
+@close-font-size: 1.25rem;
 @close-opacity: 75;
 
 
